Add navigation map

--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -10,7 +10,7 @@
         </div>
     {% endif %}
         <div class="hamburger">
-             <img src="theme/images/hamburger.svg">
+             <a href='#map'><img src="theme/images/hamburger.svg"></a>
         </div>
  </div>
  <div style="clear: both;"></div>
@@ -80,4 +80,16 @@
 
     </div>
 {% endif %}
+<div id='map' title="NAVIGATION" class='nav-bg'>
+    <div class='nav-map'>
+        <div data-attribute='bedroom' class='nav-room bedroom locked'><img src='/media/lock.svg'></div>
+        <div data-attribute='secret' class='nav-room secret locked'><img src='/media/lock.svg'></div>
+        <div data-attribute='library' class='nav-room library locked'><img src='/media/lock.svg'></div>
+        <div data-attribute='study' class='nav-room study locked'><img src='/media/lock.svg'></div>
+        <div data-attribute='foyer' class='nav-room foyer locked'><img src='/media/lock.svg'></div>
+    </div>
+    <div class='tip'>
+        Tap or click on rooms in floor plan to navigate through the residence.
+    </div>
+</div>
 {% endblock %}
