--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -10,6 +10,18 @@ font-style: normal;
 src: url("/media/fonts/SF_Compact_Text_Regular/fontsfree-net-sfcompacttext-regular-webfont.woff2") format("woff2");
 }
 
+@font-face {
+font-family: "SF Compact Display Thin";
+font-style: normal;
+src: url("/media/fonts/SF_Compact_Display/sf-compact-display-thin.woff") format("woff");
+}
+
+@font-face {
+font-family: "SF Compact Display Medium";
+font-style: normal;
+src: url("/media/fonts/SF_Compact_Display/sf-compact-display-medium.woff") format("woff");
+}
+
 /* Defaults */
 html {
     font-style: normal;
@@ -55,6 +67,8 @@ p.solution-check{
 
 div.tip {
     background-color: #E6F4FF;
+    color:#000;
+    padding: 1em;
 }
 div.answer {
     padding: 2em;
@@ -118,4 +132,57 @@ img.switch {
 
 .slick-prev:before, .slick-next:before {
     color: black;
+}
+
+/* Nav Map CSS */
+
+.ui-dialog, .ui-dialog-dragging, .ui-dialog-resizing {
+    background-color: #333333;
+    height: 100%;
+    color: #FFFFFF;
+}
+
+.ui-widget-header {
+    border: none;
+}
+
+.ui-dialog-titlebar {
+    background-color: rgba(0,0,0,0);
+}
+.ui-dialog-title {
+    color:#fff;
+    font-family: 'SF Compact Display Thin', sans-serif;
+}
+.ui-dialog-titlebar-close {}
+
+div.nav-bg {
+  background-color: #333333;
+  height: 100%;
+  color: #FFFFFF;
+}
+div.nav-map {
+    padding-bottom: 10%;
+    text-align: center;
+    font-family: 'SF Compact Display Thin', sans-serif;
+}
+div.nav-room {
+    color: #000000;
+    height: 99px;
+    margin-bottom: 4px;
+    display: inline-block;
+}
+div.nav-room.locked {
+    background-color: #949494;
+}
+div.nav-room.unlocked {
+    background-color: #E5E5E5;
+}
+div.nav-room.bedroom {width:116px;}
+div.nav-room.secret {width:82px}
+div.nav-room.library {width:99px}
+div.nav-room.study {width:99px}
+div.nav-room.foyer {width:201px; height:70px;}
+
+div.nav-room > img {
+    width:50px;
 }
