--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
  <title>{% block title %}{% endblock %}</title>
+     {% if FAVICON %}
+        <link rel="icon" href="/{{ FAVICON }}" type="image/x-icon" />
+    {% endif %}
      <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
      <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
      <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
