--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -6,13 +6,9 @@
 <div class="row">
  <div class="col-md-8">
   <h1>{{ SITENAME }}</h1>
-  {% for article in articles %}
-   <h2><a href="/{{ article.slug }}.html">{{ article.title }}</a></h2>
-   <label>Posted on <strong>{{ article.date }}</strong></label>
-   {{ article.content|truncate(110) }}
-  {% else %}
-   No posts yet!
-  {% endfor %}
+  <p>A browser based escape room. Playable in about 30 minutes.</p>
+  <p>Please be aware that this site relies on cookies (really a single cookie) to function. Without it you cannot progress between screens as there is NO backend/server component keeping track of you (ever).</p>
+  <p>Click <a href="/intro_puzzle1_0.html">here</a> to begin.</p>
  </div>
 </div>
 {% endblock %}
