--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -85,13 +85,13 @@
 
     </div>
 {% endif %}
-<div id='map' title="NAVIGATION" class='nav-bg'>
+<div id='map' title="RESIDENCE MAP" class='nav-bg'>
     <div class='nav-map'>
-        <div data-attribute='bedroom' class='nav-room bedroom locked'><img src='/media/lock.svg'></div>
-        <div data-attribute='secret' class='nav-room secret locked'><img src='/media/lock.svg'></div>
-        <div data-attribute='library' class='nav-room library locked'><img src='/media/lock.svg'></div>
-        <div data-attribute='study' class='nav-room study locked'><img src='/media/lock.svg'></div>
-        <div data-attribute='foyer' class='nav-room foyer locked'><img src='/media/lock.svg'></div>
+        <div data-attribute='bedroom' class='nav-room bedroom locked'><p><img src='/media/lock.svg'></p></div>
+        <div data-attribute='secret' class='nav-room secret locked'><p><img src='/media/lock.svg'></p></div>
+        <div data-attribute='library' class='nav-room library locked'><p><img src='/media/lock.svg'></p></div>
+        <div data-attribute='study' class='nav-room study locked'><p><img src='/media/lock.svg'></p></div>
+        <div data-attribute='foyer' class='nav-room foyer locked'><p><img src='/media/lock.svg'></p></div>
     </div>
     <div class='tip'>
         Tap or click on rooms in floor plan to navigate through the residence.
