--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta content="utf-8" http-equiv="encoding">
  <title>{% block title %}{% endblock %}</title>
      {% if FAVICON %}
         <link rel="icon" href="/{{ FAVICON }}" type="image/x-icon" />
