--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -9,6 +9,8 @@
   <p>A browser based escape room. Playable in about 30 minutes.</p>
   <p>Please be aware that this site relies on cookies (really a single cookie) to function. Without it you cannot progress between screens as there is NO backend/server component keeping track of you (ever).</p>
   <p>Click <a href="/intro_puzzle1_0.html">here</a> to begin.</p>
+  <p>If you've been here before and want to reset the game state (delete your cookie) here's a convenient button:</p>
+  <button onclick="resetGameData()">Reset Game Data</button> 
  </div>
 </div>
 {% endblock %}
