Bugfix - inventory updates as you click around the map

--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -96,5 +96,6 @@
     <div class='tip'>
         Tap or click on rooms in floor plan to navigate through the residence.
     </div>
+    <div class="inventory"></div>
 </div>
 {% endblock %}
